--- a/todo.txt
+++ b/todo.txt
@@ -19,6 +19,7 @@
   - [x] BookmarkAuction (NFT marketplace)
   - [x] CardCatalog (Token staking)
 - [x] Contract methods defined in services layer
+- [x] Fixed TypeScript compatibility issues with ethers.js v6 readonly arrays
 
 ### UI Components & Pages
 - [x] Basic layout with library theme
@@ -37,41 +38,41 @@
 
 ## 🔄 IN PROGRESS
 
+### BookmarkLeaderboard Integration
+- [x] Create Leaderboard page
+- [x] Display top Evermarks by voting cycle
+- [ ] Show user's content ranking
+- [x] Weekly leaderboard navigation
+- [x] Connect to contract methods:
+  - [x] getWeeklyTopBookmarks
+  - [x] getBookmarkRankForWeek
+  - [x] isLeaderboardFinalized
+
+### BookmarkRewards System
+- [x] Add rewards section to Profile page
+- [x] Build rewards claiming interface
+- [ ] Display claimed rewards history
+- [x] Implement rewards update functionality
+- [x] Connect to contract methods:
+  - [x] getPendingRewards
+  - [x] claimRewards
+  - [x] updateStakingPower
+
 ### Contract Integration Gaps
-- [ ] **BookmarkVoting**: Enhance voting UI beyond basic functionality
-  - [ ] Full voting power allocation
-  - [ ] Vote history and analytics
-  - [ ] Cycle timing information
+- [x] Basic BookmarkVoting UI functionality
+- [ ] Enhanced voting UI beyond basic functionality
+  - [ ] Full voting power allocation visualization
+  - [ ] Complete vote history and analytics
 
 ### Local Caching & Fallbacks
-- [ ] Improve local storage caching strategies
+- [x] Basic local storage caching
+- [ ] Improve caching strategies
 - [ ] Enhance offline support
 - [ ] Better failure handling for network issues
 
 ## 📋 NEXT PRIORITIES
 
-### 1. Complete BookmarkLeaderboard Integration (High Priority)
-- [ ] Create Leaderboard page
-- [ ] Display top Evermarks by voting cycle
-- [ ] Show user's content ranking
-- [ ] Weekly leaderboard history view
-- [ ] Cycle timing information
-- [ ] Connect to existing contract methods:
-  - [ ] getWeeklyTopBookmarks
-  - [ ] getBookmarkRankForWeek
-  - [ ] isLeaderboardFinalized
-
-### 2. Implement BookmarkRewards System (High Priority)
-- [ ] Add rewards section to Profile page
-- [ ] Build rewards claiming interface
-- [ ] Display pending and claimed rewards history
-- [ ] Implement automatic rewards update functionality
-- [ ] Connect to existing contract methods:
-  - [ ] getPendingRewards
-  - [ ] claimRewards
-  - [ ] updateStakingPower
-
-### 3. Build BookmarkAuction Marketplace (Medium Priority)
+### 1. Complete BookmarkAuction Marketplace (High Priority)
 - [ ] Create Auction listing page
 - [ ] Build auction creation interface
 - [ ] Implement bidding functionality
@@ -85,16 +86,17 @@
   - [ ] getAuctionDetails
   - [ ] getActiveAuctions
 
-### 4. Enhance CardCatalog Features (Medium Priority)
-- [ ] Improve staking interface
+### 2. Enhance CardCatalog Features (Medium Priority)
+- [x] Basic staking interface in Profile
+- [ ] Improve staking interface with better UX
 - [ ] Add visualization for voting power allocation
 - [ ] Implement token staking analytics
 - [ ] Build unbonding request management UI
 - [ ] Connect to complete set of existing methods:
-  - [ ] wrapTokens (staking)
-  - [ ] requestUnwrap (unbonding)
-  - [ ] completeUnwrap (claiming)
-  - [ ] getUnbondingRequests (viewing)
+  - [x] wrapTokens (staking)
+  - [x] requestUnwrap (unbonding)
+  - [x] completeUnwrap (claiming)
+  - [x] getUnbondingRequests (viewing)
 
 ## 🧪 TESTING & REFINEMENT
 
@@ -107,9 +109,9 @@
 - [ ] Test CardCatalog Staking and Unbonding
 
 ### UI/UX Improvements
-- [ ] Loading states for all blockchain operations
+- [x] Basic loading states for blockchain operations
 - [ ] Consistent error handling throughout UI
-- [ ] Mobile responsiveness for all new interfaces
+- [x] Mobile responsiveness for all interfaces
 - [ ] Improved animations and transitions
 
 ## 🚀 DEPLOYMENT STEPS
